--- a/templates/home.html
+++ b/templates/home.html
@@ -51,7 +51,7 @@
 		<a href="#" class="list-group-item active">随机图书鉴赏</a>
 		<ul class="list-group"  style="min-height:250px;overflow-y:auto;max-height:300px;">
 			{%for item in res_book%}
-		  <li class="list-group-item">{{item.title}}</li>
+		  <li class="list-group-item"><a href='/recommend/?id={{item.id}}&type=book'>{{item.title}}</a></li>
 		  	{%endfor%}
 		</ul>
 		<!--推荐books：<br>
