--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+	<!--引入静态文件-->
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<script src="/static/js/bootstrap.min.js" ></script>
 	<script type="text/JavaScript" src="/static/js/jquery.min.js"></script>
     <title>{% block title %}Ĭ默认标题{% endblock %} </title>
 </head>
 <body>
+<!-- 创建content区块方便覆写-->
 {% block content %}
 <div>默认内容</div>
 {% endblock %}
