--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,8 @@
 ﻿{% extends 'base.html' %}
- 
 {% block title %}欢迎光临首页{% endblock %}
- 
 {% block content %}
 <div class="container">
+	<!--导航栏 -->
 	<div class="row" id="nav">
 		<div class="col-md-10">
 		<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
@@ -14,6 +13,7 @@
 		</ul>
 		</div>
 	</div>
+	<!--巨幕-->
 	<div class="row" id="jump">
 		<div class="col-md-10">
 		<div class="jumbotron">
@@ -31,21 +31,13 @@
 		</div>
 		</div>
 	</div>
-	<!--<div class="row" id="search">
-	  <div class="col-lg-6">
-		<div class="input-group">
-		  <input type="text" class="form-control" placeholder="Search for...">
-		  <span class="input-group-btn">
-			<button class="btn btn-default" type="button">Go!</button>
-		  </span>
-		</div> 
-	  </div>
-	</div>-->
+	<!--图像，保持格式 -->
 	<div class="row" id="icon">
 	    <div class="col-md-10">
 		<span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
 		</div>
 	</div>
+	<!--图书论文展示区 -->
 	<div class="row" id="content">
 		<div class="col-md-5">
 			<a href="#" class="list-group-item active">随机图书鉴赏</a>
@@ -54,10 +46,6 @@
 			  <li class="list-group-item"><a href='/recommend/?id={{item.id}}&type=book'>{{item.title}}</a></li>
 				{%endfor%}
 			</ul>
-			<!--推荐books：<br>
-			{%for item in res_book%}
-			{{item.title}}<br>
-			{%endfor%}!-->
 		</div>
 		<div class="col-md-5" >
 			<a href="#" class="list-group-item active">随机论文鉴赏</a>
@@ -66,10 +54,6 @@
 			  <li class="list-group-item"><a href='/recommend/?id={{item.id}}&type=paper'>{{item.title}}</a></li>
 				{%endfor%}
 			</ul>
-			<!--推荐papers：<br>
-			{%for item in res_paper%}
-			{{item.title}}<br>
-			{%endfor%}-->
 		</div>
 	</div>
 </div>
