--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -1,9 +1,10 @@
 ﻿{% extends 'base.html' %}
-
+<!--覆写title区块 -->
 {% block title %}查询结果{% endblock %}
- 
+ <!--覆写content区块 -->
 {% block content %}
 <div class="container">
+	<!--导航栏 -->
 	<div class="row" id="nav">
 		<div class="col-md-11">
 		<span></span>
@@ -21,9 +22,11 @@
 		<span>以下结果根据 <b>{%if res_paper%}{{res_paper.title}}{% else %}{{res_book.title}}{% endif%}</b> 进行推荐</span>
 		</div>
 	</div>
+	<!--展示推荐结果 -->
 	<div class="row" id="content">
 		<div class="col-md-6" style="min-height:550px;overflow-y:auto;max-height:300px;font-size:20px;">
 		<a href="#" class="list-group-item active">图书推荐结果</a>
+		<!--展示前提json格式数据非空 -->
 		{% if res_rec_book %}
 			<table class="table table-hover table-condensed">
 					<tr class="info" style="height:75px;">
@@ -47,6 +50,7 @@
 					 {%endfor%}
 			</table>
 		{%else%}
+		<!--若无数据则随机推荐 -->
 		<span> &nbsp &nbsp &nbsp <font size=2px>抱歉！系统并未有关于<b>{%if res_paper%}{{res_paper.title}}{% else %}{{res_book.title}}{% endif%}</b> 的图书推荐</font></span>
 		<br>&nbsp &nbsp &nbsp <font size=2px>你可以看看</font>：
 			<a href="#" class="list-group-item active">随机图书鉴赏</a>
@@ -93,28 +97,6 @@
 			</ul>
 			{%endif%}	
 	</div>
-</div>
-<!--<div class="row" id="content2">
-	<span> &nbsp &nbsp &nbsp抱歉！系统并未有关于<b>{%if res_paper%}{{res_paper.title}}{% else %}{{res_book.title}}{% endif%}</b> 的推荐</span>
-		<br>&nbsp &nbsp &nbsp你可以看看：
-		<div class="col-md-5">
-			<a href="#" class="list-group-item active">随机图书鉴赏</a>
-			<ul class="list-group"  style="min-height:250px;overflow-y:auto;max-height:300px;">
-				{%for item in res_book_r%}
-			  <li class="list-group-item"><a href='/recommend/?id={{item.id}}&type=book'><font size=1.5px>{{item.title}}</font></a></li>
-				{%endfor%}
-			</ul>
-
-			</div>
-			<div class="col-md-5" >
-			<a href="#" class="list-group-item active">随机论文鉴赏</a>
-			<ul class="list-group" style="min-height:250px;overflow-y:auto;max-height:300px;">
-				{%for item in res_paper_r%}
-			  <li class="list-group-item"><a href='/recommend/?id={{item.id}}&type=paper'>{{item.title}}</a></li>
-				{%endfor%}
-			</ul>
-
-		</div>
-	</div>-->
+	</div>
 </div>
 {% endblock %}
