--- a/templates/show.html
+++ b/templates/show.html
@@ -1,9 +1,10 @@
 ﻿{% extends 'base.html' %}
-
+<!--覆写title区块 -->
 {% block title %}查询结果{% endblock %}
- 
+ <!--覆写content区块 -->
 {% block content %}
 <div class="container">
+	<!--导航栏 -->
 	<div class="row" id="nav">
 		<div class="col-md-11">
 		<span></span>
@@ -15,12 +16,14 @@
 		</ul>
 		</div>
 	</div>
+	<!--图形，保持格式 -->
 	<div class="row" id="icon">
 		<div class="col-md-11">
 		<span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
 		当前关键词(字)：{{keyword}}
 		</div>
 	</div>
+	<!--按项展示查询结果 -->
 	<div class="row" id="content">
 			<div class="col-md-6" style="min-height:550px;overflow-y:auto;max-height:300px;font-size:20px;">
 			<a href="#" class="list-group-item active">图书查询结果</a>
