--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<script src="/static/js/bootstrap.min.js" ></script>
 	<script type="text/JavaScript" src="/static/js/jquery.min.js"></script>
+	<script type="text/JavaScript" src="/static/js/jquery.js"></script>
     <title>{% block title %}Ĭ默认标题{% endblock %} </title>
 </head>
 <body>
