--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<!--引入静态文件-->
+    <script type="text/JavaScript" src="/static/js/jquery.min.js"></script>
+	<script type="text/JavaScript" src="/static/js/jquery.js"></script>
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<script src="/static/js/bootstrap.min.js" ></script>
-	<script type="text/JavaScript" src="/static/js/jquery.min.js"></script>
-	<script type="text/JavaScript" src="/static/js/jquery.js"></script>
     <title>{% block title %}Ĭ默认标题{% endblock %} </title>
 </head>
 <body>
@@ -13,5 +13,14 @@
 {% block content %}
 <div>默认内容</div>
 {% endblock %}
+<footer>
+    <div class="container">
+        <div class="col-md-10"style="font-size: 2px">
+            <span>Copyright © 2017 - 2027 All Rights Reserved Powered by Jiangsu Institute of Technology</span><br>
+            <span>地址：中国江苏常州中吴大道1801号（213001）</span>
+            <span>苏ICP备05071372号 &nbsp 版权所有 @ 2015 江苏理工学院</span>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
