--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,6 @@
 	<!--导航栏 -->
 	<div class="row" id="nav">
 		<div class="col-md-10">
-		<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
 		<ul class="nav nav-tabs">
 			  <li role="presentation" class="active"><a href="#">主页</a></li>
 			  <li role="presentation"><a href="#">图书</a></li>
@@ -16,8 +15,8 @@
 	<!--巨幕-->
 	<div class="row" id="jump">
 		<div class="col-md-10">
-		<div class="jumbotron">
-		  <h1>欢迎光临首页！</h1>
+		<div class="jumbotron"  style=" background-image:url(/static/pic/Lib.jpg)">
+		  <h2>江苏理工学院图书馆欢迎您使用！</h2>
 		  <p>请于下方键入搜索内容</p>
 		  <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">了解更多</a></p>-->
 		  <form action="/show" method="get">
@@ -43,7 +42,22 @@
 			<a href="#" class="list-group-item active">随机图书鉴赏</a>
 			<ul class="list-group"  style="min-height:250px;overflow-y:auto;max-height:300px;">
 				{%for item in res_book%}
-			  <li class="list-group-item"><a href='/recommend/?id={{item.id}}&type=book'>{{item.title}}</a></li>
+				<li class="list-group-item" data-toggle="modal" data-target="#myModal{{item.callId}}"><a href='/recommend/?id={{item.id}}&type=book'>{{item.title}}</a></li>
+				<!-- 模态框（Modal） -->
+					<div class="modal fade" id="myModal{{item.callId}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+									<h4 class="modal-title" id="myModalLabel">《{{item.title}}》的详细资料</h4>
+								</div>
+								<div class="modal-body">图书ID：{{item.callId}}<br>作者：{{item.author}}<br>出版社：{{item.publisher}}<br>出版年月：{{item.pubYear}}<br>中图法分类：{{item.isbn}}</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+								</div>
+							</div><!-- /.modal-content -->
+						</div><!-- /.modal -->
+					</div>
 				{%endfor%}
 			</ul>
 		</div>
@@ -51,7 +65,22 @@
 			<a href="#" class="list-group-item active">随机论文鉴赏</a>
 			<ul class="list-group" style="min-height:250px;overflow-y:auto;max-height:300px;">
 				{%for item in res_paper%}
-			  <li class="list-group-item"><a href='/recommend/?id={{item.id}}&type=paper'>{{item.title}}</a></li>
+				<li class="list-group-item" title={{item.intro}} data-toggle="modal" data-target="#myModal{{item.id}}"><a href='/recommend/?id={{item.id}}&type=paper'>{{item.title}}</a></li>
+				<!-- 模态框（Modal） -->
+					<div class="modal fade" id="myModal{{item.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+									<h4 class="modal-title" id="myModalLabel">《{{item.title}}》的详细资料</h4>
+								</div>
+								<div class="modal-body">论文ID：{{item.paperId}}<br>链接：{{item.url}}<br>简介：{{item.intro}}</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+								</div>
+							</div><!-- /.modal-content -->
+						</div><!-- /.modal -->
+					</div>
 				{%endfor%}
 			</ul>
 		</div>
