--- a/templates/home.html
+++ b/templates/home.html
@@ -10,23 +10,24 @@
 			  <li role="presentation"><a href="#">图书</a></li>
 			  <li role="presentation"><a href="#">论文</a></li>
 		</ul>
+		
 		</div>
 	</div>
 	<!--巨幕-->
 	<div class="row" id="jump">
-		<div class="col-md-11">
-		<div class="jumbotron"  style=" background-image:url(/static/pic/Lib.jpg)">
-		  <h2>江苏理工学院图书馆欢迎您使用！</h2>
-		  <p>请于下方键入搜索内容</p>
-		  <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">了解更多</a></p>-->
-		  <form action="/show" method="get">
-		  <div class="col-md-6 input-group">
-			  <input type="text" class="form-control" placeholder="Search for..." name="keyword">
-			  <span class="input-group-btn">
-				<button class="btn btn-info" type="submit">搜索</button>
-			  </span>
-		  </div><!-- /.col-lg-6 -->
+		<div class="col-md-11" >
+		<div class="jumbotron "  style=" background-image:url(/static/pic/Lib.jpg);background-size:100% 100%;position:relative;padding-top:20px;">		 
+		  <form action="/show" class="form-inline" method="get" style="position:relative;top:5px">		    
+			<label class="form-label" style="font-size:25px">江苏理工学院图书馆欢迎您使用！</label>
+			<input type="text" class="form-control" placeholder="Search for..." name="keyword" >
+			<button class="btn btn-info form-control" type="submit">搜索</button>
 		  </form>
+		  <p> ·</p>
+		  <p> ·</p>
+		  <p> ·</p>
+		  <p> ·</p>
+		  <p> ·</p>	
+		  <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">了解更多</a></p>-->
 		</div>
 		</div>
 	</div>
