--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,38 @@
 	<script type="text/JavaScript" src="/static/js/jquery.js"></script>
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<script src="/static/js/bootstrap.min.js" ></script>
-    <title>{% block title %}Ĭ默认标题{% endblock %} </title>
+    <title>{% block title %}默认标题{% endblock %} </title>
+    <script type="text/javascript">
+        var Sys = {};
+        var ua = navigator.userAgent.toLowerCase();
+        var s;
+        var a=0;
+        (s = ua.match(/msie ([\d.]+)/)) ? Sys.ie = s[1] :
+        (s = ua.match(/firefox\/([\d.]+)/)) ? Sys.firefox = s[1] :
+        (s = ua.match(/chrome\/([\d.]+)/)) ? Sys.chrome = s[1] :
+        (s = ua.match(/opera.([\d.]+)/)) ? Sys.opera = s[1] :
+        (s = ua.match(/version\/([\d.]+).*safari/)) ? Sys.safari = s[1] : 0;
+
+        //以下进行测试
+        if (Sys.ie)  a=1;//document.write('IE: ' + Sys.ie);
+        if (Sys.firefox)  a=1;//document.write('Firefox: ' + Sys.firefox);
+        if (Sys.chrome)//document.write('Chrome: ' + Sys.chrome);
+        if (Sys.opera)  a=1;//document.write('Opera: ' + Sys.opera);
+        if (Sys.safari)  a=1;//document.write('Safari: ' + Sys.safari);
+
+        $(document).ready(function(){
+            var ui = document.getElementById("chrome");
+            ui.style.display="none";
+            if (a==1){
+                            ui.style.display="true";
+                    }
+        });
+    </script>
 </head>
 <body>
+<div class="container" id="chrome" style="color:red;font-size:30px;height:50px;">
+    <div class="row" >为体验流畅，请使用Chrome内核浏览器，参考下载地址：<a href="http://down.tech.sina.com.cn/page/40975.html">这里</a></div>
+</div>
 <!-- 创建content区块方便覆写-->
 {% block content %}
 <div>默认内容</div>
